--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sqlite3": "^4.0.0",
     "youtube-info": "^1.2.0",
     "ytdl-core": "^0.20.3"
-    "math-expression-evaluator": "^1.2.17"
+    "math-expression-evaluator": "^1.2.17",
   },
   "engines": {
     "node": "8.4.0"
