--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sqlite": "^2.9.1",
     "sqlite3": "^4.0.0",
     "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.20.3"
+    "ytdl-core": "^0.20.3",
     "math-expression-evaluator": "^1.2.17"
   },
   "engines": {
